# codegrapher

./: .gitignore  IMPLEMENTATION_PLAN_CLI_AND_DOCS.md  IMPLEMENTATION_PLAN_NAMED_EDGES.md  README.md  pyproject.toml
.codegraph/: index.faiss  index.ids  symbols.db
config/: mcp_server.json
docs/: ANALYSIS_compound_word_benefits.md  ANALYSIS_stemming_vs_fuzzy_matching.md  CODING_AGENT_PROMPT.md  ENGINEERING_GUIDELINES.md  EVALUATION_GUIDE.md  GROUND_TRUTH_DATASET.md  PLAN_compound_word_splitting.md  PLAN_hybrid_search.md  PLAN_v1.md  PRD_project_codegrapher_v1.0.md  PROGRESS.md
fixtures/: GROUND_TRUTH_RESEARCH_SUMMARY.md  NOTICE.txt  README.md  eval_report_before_after.md  eval_report_initial.md  eval_report_latest.md  eval_results.json  eval_results_appendable.md  ground_truth.jsonl  ground_truth_large.jsonl  ground_truth_partial.jsonl  ground_truth_pretest.jsonl  ground_truth_unresolved.jsonl
fixtures/test_repos/simple_repo/src/mypackage/: __init__.py  main.py  submodule.py  utils.py
fixtures/test_repos/simple_repo/src/mypackage/subpackage/: __init__.py
scripts/: README.md  benchmark.py  research_commits.py  validate_and_fix_ground_truth.py
scripts/01_mining/: mine_test_cases.py
scripts/02_validation/: add_query_categories.py  resolve_branch_names.py  separate_large_repos.py  validate_mined_cases.py
scripts/03_evaluation/: evaluate_ground_truth.py  research_remaining.py  run_eval_batches.sh  run_eval_robust.py
scripts/04_benchmarking/: benchmark_incremental.py
scripts/05_testing/: kill_test.py  test_benchmark.py
scripts/fixtures/: eval_results.json
src/codegrapher/: __init__.py  cli.py  graph.py  indexer.py  models.py  parser.py  resolver.py  secrets.py  server.py  sparse_index.py  vector_store.py  watcher.py
tests/: test_cli.py  test_cli_exclusions.py  test_graph.py  test_indexer.py  test_integration.py  test_resolver.py  test_secrets.py  test_server.py  test_sparse_index.py  test_vector_store_embedding_quality.py  test_watcher.py
