[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegrapher"
version = "1.0.0"
description = "Local MCP server for token-efficient code search"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CodeGrapher Contributors"}
]
keywords = ["mcp", "code-search", "embeddings", "ast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "detect-secrets>=1.5.0",
    "huggingface-hub>=0.19.0",
    "watchdog>=3.0.0",
    "networkx>=3.0",
    "scipy>=1.10.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
]

[project.scripts]
codegraph = "codegrapher.cli:main"
codegraph-init = "codegrapher.cli:init_command"
codegraph-build = "codegrapher.cli:build_command"
codegraph-query = "codegrapher.cli:query_command"
codegraph-update = "codegrapher.cli:update_command"
codegraph-mcp-config = "codegrapher.cli:mcp_config_command"
codegraph-watch = "codegrapher.cli:watch_command"

[project.urls]
Homepage = "https://github.com/codegrapher/codegrapher"
Repository = "https://github.com/codegrapher/codegrapher"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
